<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                                android:background = '@color/darker_white'
                                                android:layout_height="match_parent"
                                             tools:context=".PostBookActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="42dp"
                android:ems="10"
                android:hint="Book Title"
                android:backgroundTint="@color/middle_blue"
                android:textCursorDrawable="@color/middle_blue"
                android:inputType="textPersonName"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="ISBN"
                android:backgroundTint="@color/middle_blue"
                android:textCursorDrawable="@color/middle_blue"
                android:inputType="textPersonName"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <EditText
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:backgroundTint="@color/middle_blue"
                android:textCursorDrawable="@color/middle_blue"
                android:hint="Author"
                android:inputType="textPersonName"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isbn" />

            <EditText
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/middle_blue"
                android:textCursorDrawable="@color/middle_blue"
                android:ems="10"
                android:hint="Genre"
                android:inputType="textPersonName"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author" />

            <EditText
            android:id="@+id/pagecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Page Count"
            android:backgroundTint="@color/middle_blue"
            android:textCursorDrawable="@color/middle_blue"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

            <EditText
                android:id="@+id/image_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:backgroundTint="@color/middle_blue"
                android:textCursorDrawable="@color/middle_blue"
                android:hint="Image URL"
                android:inputType="textPersonName"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pagecount" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/error_msg"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Post Book"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="145dp"
                    android:background="@drawable/shape_capsule"
                    android:textColor="@drawable/text_selector"/>

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Back"
                    android:background="@drawable/shape_capsule"
                    android:textColor="@drawable/text_selector"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>