...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/profile_button"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_capsule"
            android:text="Profile"
            android:textColor="@drawable/text_selector"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/like_button"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_capsule"
            android:text="@string/like_book_button"
            android:textColor="@drawable/text_selector"
            tools:layout_editor_absoluteX="280dp"
...
