...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20px"
        >

        <Button
            android:id="@+id/post_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Post Book"
            android:layout_weight="1"
            android:background="@drawable/shape_capsule"
            android:textColor="@drawable/text_selector"/>


        <Button
            android:id="@+id/sell_book_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sell Book"
            android:layout_weight="1"
            android:background="@drawable/shape_capsule"
            android:textColor="@drawable/text_selector"/>
...
